# fastapi_debug_toolkit

./: .gitignore  LICENSE  Makefile  Makefile.scm  Makefile.setup  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
fastapi_debug_toolkit/: __init__.py  debugctl_cli.py  router.py  util.py
fastapi_debug_toolkit/debugctl/: cli.py  util.py
scripts/: Makefile.fastapi_debug_toolkit  download.sh  fastapi_debug_toolkit.config.mk
tests/: test_cli.py  test_router.py  test_util.py
