[project]
name = "fastapi-debug-toolkit"
version = "0.1.0"
description = "Debug and diagnostics toolkit for FastAPI"
authors = [{ name = "ZIgr", email = "zaporozhets@hotmail.com" }]
dependencies = ["fastapi", "pydantic", "typer", "jinja2"]
readme = "README.md"

[project.scripts]
debugctl_cli = "fastapi_debug_toolkit.debugctl_cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
