[project]
name = "fastapi-debug-toolkit"
version = "0.1.0"
description = "Debug and diagnostics toolkit for FastAPI"
authors = [{ name = "ZIgr", email = "zaporozhets.igor@gmail.com" }]
dependencies = ["fastapi", "pydantic", "typer", "jinja2", "python-dotenv"]
readme = "README.md"

[project.scripts]
debugctl = "fastapi_debug_toolkit.debugctl.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
